--- a/content/post/Golang/001-Go开发效率神器汇总.md
+++ b/content/post/Golang/001-Go开发效率神器汇总.md
@@ -49,6 +49,9 @@ keywords: ["Go", "tool"]
 > 9: **gotests** 自动生成测试用例工具
 > https://github.com/cweill/gotests
 
+> 10: **gomodifytags** Go tool to modify struct field tags
+> https://github.com/fatih/gomodifytags
+
 # 2：调试工具
 
 > 1: **perf**
@@ -104,6 +107,9 @@ keywords: ["Go", "tool"]
 > 14: **分布式调度工具** > https://github.com/shunfei/cronsun/blob/master/README_ZH.md > https://github.com/ouqiang/gocron
 
 > 15: **自动化运维平台 Gaia** > https://github.com/gaia-pipeline/gaia
+
+> 16: **heimdall** 一个增强型 http 库，具有(断路器，retry mechanism)
+> https://github.com/gojek/heimdall
 
 # 3：网络工具
 
