add (1)go git仓库私有化;(2)grpc makefile

--- a/content/post/Others/002-文章2.md
+++ b/content/post/Others/002-文章2.md
@@ -5,8 +5,8 @@ description: "描述信息 2"
 date: 2021-04-06
 lastmod: 2021-04-06
 
+categories: ["other"]
 tags: ["Hugo"]
-categories: ["Hugo"]
 keywords: ["Hugo", "static", "generator"]
 ---
 
