--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -56,6 +56,9 @@ keywords: ["Go", "tool", "库", "pkg"]
   - [15.7 Juniper 是一个使用泛型扩展 Go 标准库的库，包括容器、迭代器和 stream](#157-juniper-是一个使用泛型扩展-go-标准库的库包括容器迭代器和-stream)
   - [15.8 samber/lo](#158-samberlo)
   - [15.9 gopsutil](#159-gopsutil)
+  - [15.10 数学相关的库](#1510-数学相关的库)
+  - [15.11 提供优化的算法以利用现代 CPU 的特性](#1511-提供优化的算法以利用现代-cpu-的特性)
+  - [15.12 FTP](#1512-ftp)
 
 # 1：日志库
 
@@ -221,6 +224,12 @@ https://go-kratos.dev/docs/getting-started/usage
 https://github.com/uber-go/ratelimit
 https://blog.csdn.net/chenchongg/article/details/85342086
 https://github.com/juju/ratelimit
+
+// 分布式速率限制的滑动窗口算法的 Golang 实现
+https://github.com/RussellLuo/slidingwindow
+
+// 分布式应用程序的 Golang 速率限制器
+https://github.com/mennanov/limiters
 ```
 
 ## 11.2 熔断
@@ -239,6 +248,10 @@ https://github.com/juju/ratelimit
 - https://github.com/Kashoo/go-micro-opentelemetry
 
 # 12: 测试相关 related
+
+```go
+https://github.com/kyoh86/richgo
+```
 
 ## 12.1 单元测试
 
@@ -271,6 +284,9 @@ https://github.com/xyctruth/profiler
 
 // autopprof
 https://github.com/lppgo/autopprof
+
+//
+https://github.com/loov/goda
 ```
 
 # 13: 代码检测 related
@@ -416,4 +432,27 @@ lo
 ```go
 https://github.com/shirou/gopsutil
 https://mp.weixin.qq.com/s/yTblk9Js1Zcq5aWVcYGjOA
+```
+
+## 15.10 数学相关的库
+
+```go
+// 任意精度小数decimals
+https://github.com/cockroachdb/apd
+
+// 数学统计，中位数，平均值等
+https://github.com/montanaflynn/stats
+```
+
+## 15.11 提供优化的算法以利用现代 CPU 的特性
+
+```go
+https://github.com/segmentio/asm
+```
+
+## 15.12 FTP
+
+```go
+// 基于 Golang 的自治 FTP 服务器，带有 SFTP、S3、Dropbox 和 Google Drive 连接器。
+https://github.com/fclairamb/ftpserver
 ```
