--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -38,6 +38,7 @@ keywords: ["Go", "tool", "库", "pkg"]
   - [12.1 单元测试](#121-单元测试)
   - [12.2 性能测试](#122-性能测试)
   - [12.3 FuzzTesting](#123-fuzztesting)
+  - [12.4 LoadTesting](#124-loadtesting)
 - [14: 性能分析](#14-性能分析)
   - [14.1 prof](#141-prof)
   - [14.2 trace](#142-trace)
@@ -46,19 +47,20 @@ keywords: ["Go", "tool", "库", "pkg"]
   - [13.1 竞态检测](#131-竞态检测)
   - [13.2 go vet 静态检查](#132-go-vet-静态检查)
   - [13.3 Shadowing variable](#133-shadowing-variable)
-- [15: Others](#15-others)
-  - [15.1 email 电子邮件](#151-email-电子邮件)
-  - [15.2 热编译](#152-热编译)
-  - [15.3 参数校验](#153-参数校验)
-  - [15.4 任务调度工具](#154-任务调度工具)
-  - [15.5 自动化运维平台](#155-自动化运维平台)
-  - [15.6 deep preety print](#156-deep-preety-print)
-  - [15.7 Juniper 是一个使用泛型扩展 Go 标准库的库，包括容器、迭代器和 stream](#157-juniper-是一个使用泛型扩展-go-标准库的库包括容器迭代器和-stream)
-  - [15.8 samber/lo](#158-samberlo)
-  - [15.9 gopsutil](#159-gopsutil)
-  - [15.10 数学相关的库](#1510-数学相关的库)
-  - [15.11 提供优化的算法以利用现代 CPU 的特性](#1511-提供优化的算法以利用现代-cpu-的特性)
-  - [15.12 FTP](#1512-ftp)
+- [15: health/status checking](#15-healthstatus-checking)
+- [16: Others](#16-others)
+  - [16.1 email 电子邮件](#161-email-电子邮件)
+  - [16.2 热编译](#162-热编译)
+  - [16.3 参数校验](#163-参数校验)
+  - [16.4 任务调度工具](#164-任务调度工具)
+  - [16.5 自动化运维平台](#165-自动化运维平台)
+  - [16.6 deep preety print](#166-deep-preety-print)
+  - [16.7 Juniper 是一个使用泛型扩展 Go 标准库的库，包括容器、迭代器和 stream](#167-juniper-是一个使用泛型扩展-go-标准库的库包括容器迭代器和-stream)
+  - [16.8 samber/lo](#168-samberlo)
+  - [16.9 gopsutil](#169-gopsutil)
+  - [16.10 数学相关的库](#1610-数学相关的库)
+  - [16.11 提供优化的算法以利用现代 CPU 的特性](#1611-提供优化的算法以利用现代-cpu-的特性)
+  - [16.12 FTP](#1612-ftp)
 
 # 1：日志库
 
@@ -259,6 +261,13 @@ https://github.com/kyoh86/richgo
 
 ## 12.3 FuzzTesting
 
+## 12.4 LoadTesting
+
+```go
+fortio
+// https://github.com/fortio/fortio
+```
+
 # 14: 性能分析
 
 ## 14.1 prof
@@ -350,9 +359,21 @@ go-nyet file.go
 
 ```
 
-# 15: Others
+# 15: health/status checking
 
-## 15.1 email 电子邮件
+- 服务健康状态检查
+
+```go
+// AlterManager
+
+
+// easyprobe
+https://github.com/megaease/easeprobe
+```
+
+# 16: Others
+
+## 16.1 email 电子邮件
 
 ```go
 //
@@ -360,7 +381,7 @@ https://github.com/AfterShip/email-verifier
 
 ```
 
-## 15.2 热编译
+## 16.2 热编译
 
 ```go
 gowatch
@@ -374,14 +395,14 @@ air
 
 ```
 
-## 15.3 参数校验
+## 16.3 参数校验
 
 ```go
 validator
 // https://github.com/go-playground/validator
 ```
 
-## 15.4 任务调度工具
+## 16.4 任务调度工具
 
 ```go
 cronsun
@@ -394,28 +415,28 @@ gocron
 https://github.com/robfig/cron
 ```
 
-## 15.5 自动化运维平台
+## 16.5 自动化运维平台
 
 ```go
 gaia
 // https://github.com/gaia-pipeline/gaia
 ```
 
-## 15.6 deep preety print
+## 16.6 deep preety print
 
 ```go
 go-spew
 // https://github.com/davecgh/go-spew
 ```
 
-## 15.7 Juniper 是一个使用泛型扩展 Go 标准库的库，包括容器、迭代器和 stream
+## 16.7 Juniper 是一个使用泛型扩展 Go 标准库的库，包括容器、迭代器和 stream
 
 ```go
 juniper
 // https://github.com/bradenaw/juniper
 ```
 
-## 15.8 samber/lo
+## 16.8 samber/lo
 
 - Lodash 是一个内部封装了诸多对字符串、数组、对象等常见的数据类型的处理函数的一套工具库
 - A Lodash-style Go library based on Go 1.18+ Generics (map, filter, contains, find...)
@@ -425,7 +446,7 @@ lo
 // https://github.com/samber/lo
 ```
 
-## 15.9 gopsutil
+## 16.9 gopsutil
 
 - gopsutil psutil for golang
 
@@ -434,7 +455,7 @@ https://github.com/shirou/gopsutil
 https://mp.weixin.qq.com/s/yTblk9Js1Zcq5aWVcYGjOA
 ```
 
-## 15.10 数学相关的库
+## 16.10 数学相关的库
 
 ```go
 // 任意精度小数decimals
@@ -444,13 +465,13 @@ https://github.com/cockroachdb/apd
 https://github.com/montanaflynn/stats
 ```
 
-## 15.11 提供优化的算法以利用现代 CPU 的特性
+## 16.11 提供优化的算法以利用现代 CPU 的特性
 
 ```go
 https://github.com/segmentio/asm
 ```
 
-## 15.12 FTP
+## 16.12 FTP
 
 ```go
 // 基于 Golang 的自治 FTP 服务器，带有 SFTP、S3、Dropbox 和 Google Drive 连接器。
