add new lib cmux

--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -61,6 +61,7 @@ keywords: ["Go", "tool", "库", "pkg"]
   - [16.10 数学相关的库](#1610-数学相关的库)
   - [16.11 提供优化的算法以利用现代 CPU 的特性](#1611-提供优化的算法以利用现代-cpu-的特性)
   - [16.12 FTP](#1612-ftp)
+  - [16.13 使用 cmux 实现服务端连接多路复用](#1613-使用-cmux-实现服务端连接多路复用)
 
 # 1：日志库
 
@@ -476,4 +477,12 @@ https://github.com/segmentio/asm
 ```go
 // 基于 Golang 的自治 FTP 服务器，带有 SFTP、S3、Dropbox 和 Google Drive 连接器。
 https://github.com/fclairamb/ftpserver
+```
+
+## 16.13 使用 cmux 实现服务端连接多路复用
+
+```go
+// cmux
+https://mp.weixin.qq.com/s/2cERDCRKlmfHKv8gY324Hg
+https://github.com/soheilhy/cmux
 ```
