--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -62,6 +62,7 @@ keywords: ["Go", "tool", "库", "pkg"]
   - [16.11 提供优化的算法以利用现代 CPU 的特性](#1611-提供优化的算法以利用现代-cpu-的特性)
   - [16.12 FTP](#1612-ftp)
   - [16.13 使用 cmux 实现服务端连接多路复用](#1613-使用-cmux-实现服务端连接多路复用)
+  - [16.14 Golang 时间处理库](#1614-golang-时间处理库)
 
 # 1：日志库
 
@@ -485,4 +486,11 @@ https://github.com/fclairamb/ftpserver
 // cmux
 https://mp.weixin.qq.com/s/2cERDCRKlmfHKv8gY324Hg
 https://github.com/soheilhy/cmux
+```
+
+## 16.14 Golang 时间处理库
+
+```go
+// carbon 是一个轻量级、语义化、对开发者友好的golang时间处理库，支持链式调用
+https://github.com/golang-module/carbon
 ```
