--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -70,6 +70,7 @@ keywords: ["Go", "tool", "库", "pkg"]
   - [16.18 数学 math](#1618-数学-math)
   - [16.19 流量录制](#1619-流量录制)
 - [17 一些特殊的库 Lib](#17-一些特殊的库-lib)
+- [18 tools 工具库](#18-tools-工具库)
 
 # 1：日志库
 
@@ -572,4 +573,14 @@ https://github.com/libp2p/go-reuseport
 https://github.com/uber-go/automaxprocs
 // auto adjust your GOGC value
 https://github.com/cch123/gogctuner
+```
+
+# 18 tools 工具库
+
+```go
+// ztool
+https://github.com/druidcaesa/ztool
+https://studygolang.com/articles/35697#reply0
+
+
 ```
