--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -69,6 +69,9 @@ keywords: ["Go", "tool", "库", "pkg"]
   - [16.17 读写文件相关](#1617-读写文件相关)
   - [16.18 数学 math](#1618-数学-math)
   - [16.19 流量录制](#1619-流量录制)
+  - [16.20 常用软件 SDK](#1620-常用软件-sdk)
+    - [16.20.1 钉钉 dingtalk](#16201-钉钉-dingtalk)
+    - [16.20.1 微信 wechat](#16201-微信-wechat)
 - [17 一些特殊的库 Lib](#17-一些特殊的库-lib)
 - [18 tools 工具库](#18-tools-工具库)
 
@@ -582,6 +585,20 @@ https://github.com/shopspring/decimal
 
 ```go
 https://github.com/didi/sharingan
+```
+
+## 16.20 常用软件 SDK
+
+### 16.20.1 钉钉 dingtalk
+
+```go
+https://github.com/zhaoyunxing92/dingtalk
+```
+
+### 16.20.1 微信 wechat
+
+```go
+
 ```
 
 # 17 一些特殊的库 Lib
