add python ffmpeg 音视频

--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -467,6 +467,7 @@ gocron
 
 // cron 定时任务
 https://github.com/robfig/cron
+https://github.com/deatil/doak-cron
 ```
 
 ## 16.5 自动化运维平台
@@ -619,5 +620,24 @@ https://github.com/cch123/gogctuner
 https://github.com/druidcaesa/ztool
 https://studygolang.com/articles/35697#reply0
 
+
+```
+
+# 19 金融交易相关
+
+```go
+// 期货期权 ctp 接口 Golang版 (for linux64)
+https://gitee.com/mayiweb/goctp
+
+// 股票期权 ctp 接口 Golang版 (for linux64)
+https://gitee.com/mayiweb/goctp_sopt
+
+
+// 恒生 股票期权 极速api 接口 Golang版 (for linux64)
+https://gitee.com/mayiweb/gohs
+
+
+//
+https://github.com/krenx1983/openctp
 
 ```
