--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -127,6 +127,7 @@ https://github.com/spf13/cobra
 
 ```go
 // gin
+https://github.com/JGLTechnologies/gin-rate-limit
 // echo
 // beego
 // goframe
@@ -268,6 +269,7 @@ https://github.com/jiazhoulvke/table2struct
 https://github.com/uber-go/ratelimit
 https://blog.csdn.net/chenchongg/article/details/85342086
 https://github.com/juju/ratelimit
+https://github.com/JGLTechnologies/gin-rate-limit
 
 // 分布式速率限制的滑动窗口算法的 Golang 实现
 https://github.com/RussellLuo/slidingwindow
@@ -518,6 +520,9 @@ https://github.com/cockroachdb/apd
 
 // 数学统计，中位数，平均值等
 https://github.com/montanaflynn/stats
+
+// decimal
+https://github.com/shopspring/decimal
 ```
 
 ## 16.11 提供优化的算法以利用现代 CPU 的特性
