--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -74,6 +74,7 @@ keywords: ["Go", "tool", "库", "pkg"]
     - [16.20.1 微信 wechat](#16201-微信-wechat)
 - [17 一些特殊的库 Lib](#17-一些特殊的库-lib)
 - [18 tools 工具库](#18-tools-工具库)
+- [19 金融交易相关](#19-金融交易相关)
 
 # 1：日志库
 
@@ -605,6 +606,13 @@ https://github.com/zhaoyunxing92/dingtalk
 
 ```go
 
+```
+
+## 16.21 go 加解密
+
+```go
+https://github.com/lppgo/my_test/tree/master/033_%E5%8A%A0%E8%A7%A3%E5%AF%86
+https://github.com/deatil/go-cryptobin
 ```
 
 # 17 一些特殊的库 Lib
