add go lib go-wechat-sdk

--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -75,6 +75,7 @@ keywords: ["Go", "tool", "库", "pkg"]
 - [17 一些特殊的库 Lib](#17-一些特殊的库-lib)
 - [18 tools 工具库](#18-tools-工具库)
 - [19 金融交易相关](#19-金融交易相关)
+- [20 gosdk](#20-gosdk)
 
 # 1：日志库
 
@@ -655,4 +656,16 @@ https://gitee.com/mayiweb/gohs
 //
 https://github.com/krenx1983/openctp
 
+```
+
+# 20 gosdk
+
+## 20.1 微信
+
+```go
+// PowerWeChat是一款简单易用的WeChat SDK for Golang目前已经覆盖微信公众号、微信小程序、微信支付、企业微信。功能非常的强大，几乎是把微信生态的产品都包含在内
+https://powerwechat.artisan-cloud.com/
+
+// go-wechat-miniapp-sdk
+https://github.com/dgb8901/go-wechat-miniapp-sdk
 ```
