--- a/content/post/Others/009-有趣项目记录.md
+++ b/content/post/Others/009-有趣项目记录.md
@@ -46,6 +46,11 @@ https://github.com/zerosoul/honeyed-words-generator
 https://github.com/iamtsm/tl-rtc-file
 ```
 
-# 4: 工具类
+# 4: 分布式文件系统
+
+```go
+seaweedfs
+https://github.com/seaweedfs/seaweedfs
+```
 
 # 5: 工具类
