--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -76,10 +76,13 @@ keywords: ["Go", "tool", "库", "pkg"]
 - [18 tools 工具库](#18-tools-工具库)
 - [19 金融交易相关](#19-金融交易相关)
 - [20 gosdk](#20-gosdk)
+- [21 go devops](#21-go-devops)
 
 # 1：日志库
 
 ```go
+https://github.com/hunterhug/golog
+
 https://github.com/uber-go/zap
 https://github.com/rs/zerolog
 https://github.com/Sirupsen/logrus
@@ -87,6 +90,10 @@ https://github.com/Sirupsen/logrus
 
 // 日志滚动包
 https://github.com/natefinch/lumberjack
+
+
+// 日志分析和查询平台
+https://github.com/clickvisual/clickvisual
 ```
 
 # 2：配置库
@@ -97,6 +104,7 @@ https://github.com/spf13/viper
 
 // configor Golang Configuration tool that support YAML, JSON, TOML, Shell Environment
 https://github.com/jinzhu/configor
+
 
 
 // env
@@ -117,12 +125,19 @@ kafka: https://github.com/Shopify/sarama
 
 ```go
 https://github.com/emirpasic/gods
+
+mapstructure
+
+
+// json
+https://github.com/liu-cn/json-filter
 ```
 
 # 5：CLI 命令行
 
 ```go
 https://github.com/spf13/cobra
+https://github.com/urfave/cli/
 ```
 
 # 6：web 框架
@@ -130,6 +145,7 @@ https://github.com/spf13/cobra
 ```go
 // gin
 https://github.com/JGLTechnologies/gin-rate-limit
+https://github.com/appleboy/gin-jwt
 // echo
 // beego
 // goframe
@@ -151,6 +167,9 @@ https://github.com/asim/go-micro
 
 // kratos
 https://go-kratos.dev/docs/getting-started/usage
+
+//
+https://github.com/air-go/rpc
 ```
 
 ## 7.1 Remote Procedure Call
@@ -229,13 +248,18 @@ https://github.com/grpc-ecosystem/go-grpc-middleware
 
 # 8：标准库好用可替换库
 
+- https://github.com/nikgalushko/fx
+
 ```go
 // json
 https://github.com/bytedance/sonic
-https://github.com/bytedance/sonic
+
 // map
 // go pool
 https://gitee.com/xuesongtao/taskpool/tree/master
+
+// map
+https://github.com/heiyeluren/xmm
 ```
 
 # 9：数据库相关
@@ -252,6 +276,10 @@ https://gitee.com/mirrors/gormt
 
 // table2struct
 https://github.com/jiazhoulvke/table2struct
+
+
+// mongo
+https://github.com/qiniu/qmgo
 
 ```
 
@@ -627,6 +655,12 @@ https://github.com/libp2p/go-reuseport
 https://github.com/uber-go/automaxprocs
 // auto adjust your GOGC value
 https://github.com/cch123/gogctuner
+
+//  GeoIP2
+https://github.com/Hackl0us/GeoIP2-CN
+
+// 汉字拼音
+https://github.com/mozillazg/go-pinyin
 ```
 
 # 18 tools 工具库
@@ -660,6 +694,10 @@ https://github.com/krenx1983/openctp
 
 # 20 gosdk
 
+- sdk 三方库:https://github.com/eryajf/third-tools
+- Go 开发常用工具库, Google2 步验证客户端,AES 加密解密,RSA 加密解密,钉钉机器人,邮件发送,JWT 生成解析,Log,BoltDB 操作,图片操作,json 操作,struct 序列化
+  - https://github.com/chanyipiaomiao/hltool
+
 ## 20.1 微信
 
 ```go
@@ -668,4 +706,80 @@ https://powerwechat.artisan-cloud.com/
 
 // go-wechat-miniapp-sdk
 https://github.com/dgb8901/go-wechat-miniapp-sdk
+
+https://github.com/wenerme/go-wecom
+
+// 利用企业微信像微信发信息
+https://github.com/saucer-man/wepush
+
+// 企业微信群机器人接口 Golang 封装
+https://github.com/vimsucks/wxwork-bot-go
+```
+
+## 20.2 钉钉
+
+```go
+https://github.com/CatchZeng/dingtalk
+
+https://github.com/zhaoyunxing92/dingtalk
+```
+
+# 21 go devops
+
+```go
+// ---------------- gitlab -------------------
+// Gogs 是一款极易搭建的自助 Git 服务,类似gitlab
+https://github.com/gogs/gogs/blob/main/README_ZH.md
+// 女娲 - 开源 DevOps CI/CD 自动构建和自动部署系统
+https://github.com/nvwa-io/nvwa-io
+
+
+// ---------------- iptables -------------------
+// iptables-web是一个轻量级的iptables web管理界面程序
+https://github.com/pretty66/iptables-web
+
+
+// Docker for YApi 一键部署YApi
+https://github.com/jinfeijie/yapi
+
+// Syncd - 自动化部署工具
+https://github.com/dreamans/syncd
+
+// Infinite 用于开发交互式 CLI(tui,terminal) 程序的组件库
+https://fzdwx.github.io/infinite/
+
+
+// mysql  审计平台
+https://github.com/cookieY/Yearning
+
+// supervisord
+https://github.com/ochinchina/supervisord
+
+// 可交互的网络探测分析器
+https://github.com/chenjiandongx/sniffer
+
+// 短链接
+https://github.com/weiwei2012holy/short_url
+
+
+// go流量回放
+https://github.com/buger/goreplay
+
+// 截图并发给robot
+https://github.com/eryajf/care-screenshot
+
+// 打印表格table
+https://github.com/liushuochen/gotable
+
+
+// prometheus 仪表盘instrumentation库
+https://github.com/prometheus/client_golang
+
+
+// Semaphore is a 运行 Ansible playbook 的响应式web UI
+https://docs.ansible-semaphore.com/
+
+// gossh
+https://github.com/krilor/gossh
+
 ```
