--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -260,6 +260,9 @@ https://gitee.com/xuesongtao/taskpool/tree/master
 
 // map
 https://github.com/heiyeluren/xmm
+
+//
+https://github.com/sasha-s/go-deadlock
 ```
 
 # 9：数据库相关
@@ -376,10 +379,10 @@ https://github.com/xyctruth/profiler
 // autopprof
 https://github.com/lppgo/autopprof
 
-//
+// 依赖分析
 https://github.com/loov/goda
 
-//
+// Visualize Go Dependency Trees
 https://github.com/KyleBanks/depth
 ```
 
@@ -648,30 +651,27 @@ https://github.com/deatil/go-cryptobin
 
 # 17 一些特殊的库 Lib
 
-```go
-// 端口复用
-https://github.com/libp2p/go-reuseport
-// 自动调整maxprocs
-https://github.com/uber-go/automaxprocs
-// auto adjust your GOGC value
-https://github.com/cch123/gogctuner
+- 1. **端口复用**
+     https://github.com/libp2p/go-reuseport
+- 2. **自动调整 maxprocs**
+     https://github.com/uber-go/automaxprocs
+- 3. **auto adjust your GOGC value**
+     https://github.com/cch123/gogctuner
+- 4. **GeoIP2**
+     https://github.com/Hackl0us/GeoIP2-CN
 
-//  GeoIP2
-https://github.com/Hackl0us/GeoIP2-CN
+- 5. **汉字拼音**
+     https://github.com/mozillazg/go-pinyin
 
-// 汉字拼音
-https://github.com/mozillazg/go-pinyin
-```
+- 6. **Go 语言给编译出来的程序添加图标和版本信息**
+     https://github.com/josephspurrier/goversioninfo
+     https://studygolang.com/topics/15789
 
 # 18 tools 工具库
 
-```go
-// ztool
-https://github.com/druidcaesa/ztool
-https://studygolang.com/articles/35697#reply0
-
-
-```
+- 1. **ztool**
+     https://github.com/druidcaesa/ztool
+     https://studygolang.com/articles/35697#reply0
 
 # 19 金融交易相关
 
