--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -124,13 +124,29 @@ kafka: https://github.com/Shopify/sarama
 # 4：数据结构
 
 ```go
-https://github.com/emirpasic/gods
+https://github.com/emirpasic/gods (go数据结构，sets,lists,stacks,maps.trees,queues ...)
 
-mapstructure
+// mapstructure
+https://github.com/mitchellh/mapstructure (map和struct转换)
 
 
 // json
 https://github.com/liu-cn/json-filter
+
+// 延迟队列(delay queue)
+github.com/morikuni/go-dqueue
+
+// 无锁队列
+https://github.com/lppgo/go-lockfree-queue
+
+
+// map
+https://github.com/cornelk/hashmap (线程安全,lockfree hashmap)
+https://github.com/alphadose/haxmap (Fastest and most memory efficient golang concurrent hashmap)
+https://github.com/orcaman/concurrent-map
+
+
+// xmap
 ```
 
 # 5：CLI 命令行
@@ -309,6 +325,9 @@ https://github.com/RussellLuo/slidingwindow
 
 // 分布式应用程序的 Golang 速率限制器
 https://github.com/mennanov/limiters
+
+// throttled 基于通用信元速率算法实现了对资源的访问速率限制，资源可以是特定的 URL、用户或者任何自定义的形式，可以很方便地与各种 http 和 rpc 框架进行集成。throttled 定义了限流元信息的存储抽象，并内置了 memstore，redis store 等元信息存储实现，我们可以根据具体的使用场景实现单机限流和集群限流
+https://github.com/throttled/throttled
 ```
 
 ## 11.2 熔断 CircuitBreaker
