--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -77,6 +77,7 @@ keywords: ["Go", "tool", "库", "pkg"]
 - [19 金融交易相关](#19-金融交易相关)
 - [20 gosdk](#20-gosdk)
 - [21 go devops](#21-go-devops)
+- [22 go 数据分析](#22-数据分析)
 
 # 1：日志库
 
@@ -112,6 +113,9 @@ https://github.com/caarlos0/env
 
 // Support for JSON, TOML, YAML, env, command line, file, S3 etc. Alternative to viper.
 https://github.com/knadh/koanf
+
+// A dead simple configuration manager for Go applications.
+https://github.com/tucnak/store
 ```
 
 # 3：存储相关
@@ -740,6 +744,24 @@ https://gitee.com/mayiweb/gohs
 //
 https://github.com/krenx1983/openctp
 
+// 处理货币与金融领域的库
+https://github.com/jobbole/awesome-go-cn#%E9%85%8D%E7%BD%AE%E7%AE%A1%E7%90%86
+accounting : Go语言金钱及货币格式  https://github.com/leekchan/accounting
+currency : 处理货币金额,提供货币信息和格式。
+currency : 高性能、精确的货币计算包。
+decimal : 支持任意精度的十进制数的go包  https://github.com/shopspring/decimal
+fastme : Go实现的 快速可扩展的匹配引擎 。
+go-finance : Go中的综合金融市场数据。
+go-finance : 用于货币时间价值（年金）、现金流、利率转换、债券和折旧计算的金融函数库。
+go-finance : 用于获取汇率、通过VIES查询增值税号和查询IBAN银行账号的模块。
+go-finnhub : 来自finnhub.io的股市、外汇和加密数据客户端。访问来自60多家证券交易所、10家外汇经纪商和15家以上加密交易所的实时金融市场数据。
+go-money : Fowler's Money模式的实现。
+ofxgo : 查询 OFX 服务器并解析其响应 (有一个示例的命令行客户端)
+orderbook : Golang中的限价订单簿的匹配引擎。
+techan : 具有高级市场分析和交易策略的技术分析库。
+transaction : 以多线程模式运行的嵌入式的账户交易数据库,。
+vat : VAT 验证及欧洲增值税率工具
+
 ```
 
 # 20 gosdk
@@ -833,3 +855,8 @@ https://docs.ansible-semaphore.com/
 https://github.com/krilor/gossh
 
 ```
+
+# 22 数据分析
+
+- 类似于 numpay,pandas
+- Go 中的数据分析——如何使用 Gota 包:https://www.freecodecamp.org/news/exploratory-data-analysis-in-go-with-gota/
