--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -549,6 +549,9 @@ gocron
 // cron 定时任务
 https://github.com/robfig/cron
 https://github.com/deatil/doak-cron
+
+// coming 是一个原生的任务调度系统，目前给出了定时任务和计划任务的解决方案
+https://github.com/alexanyang/coming
 ```
 
 ## 16.5 自动化运维平台
