--- a/content/post/C++/003-cpp常用头文件与库.md
+++ b/content/post/C++/003-cpp常用头文件与库.md
@@ -1,5 +1,5 @@
 ---
-title: "03-C/Cpp常用头文件大全"
+title: "03-C/Cpp常用头文件与库"
 author: "lucas"
 date: 2023-01-17
 lastmod: 2021-01-17
@@ -9,7 +9,13 @@ categories: ["C++"]
 keywords: ["C++", "CPP", "头文件"]
 ---
 
-<div align='center' ><font size='50'>C/Cpp常用头文件大全</font></div>
+<div align='center' ><font size='50'>C/Cpp常用头文件与库</font></div>
+
+- [1: C 头文件](#1-c-头文件)
+- [2：Cpp 头文件](#2cpp-头文件)
+- [3: STL 标准模板库](#3-stl-标准模板库)
+  - [3.1 STL 的组成](#31-stl-的组成)
+  - [3.2 STL 头文件](#32-stl-头文件)
 
 # 1: C 头文件
 
@@ -124,3 +130,8 @@ include <numeric>
 include <memory>
 include <utility>
 ```
+
+# 4: Cpp 库积累
+
+- [**`xpack`**](https://github.com/xyz347/xpack): 实现 C++ 结构体和 JSON/XML/BSON 互转的库
+- [**`wondertrader`**](https://github.com/wondertrader/wondertrader): 一站式的量化交易框架。这是采用 C++ 开发的一站式量化交易框架，支持量化交易过程中的数据清洗、回测分析、实盘交易、运营调度等环节。可用于多账户交易、极速/高频交易、算法交易等场景。
