[update] cpp update-alternatives安装gcc多版本2

--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -617,6 +617,9 @@ https://github.com/montanaflynn/stats
 
 // decimal
 https://github.com/shopspring/decimal
+
+// gonum
+https://github.com/gonum/gonum
 ```
 
 ## 16.11 提供优化的算法以利用现代 CPU 的特性
