[update]  add go lib errcheck

--- a/content/post/Golang/003-Go常用库积累.md
+++ b/content/post/Golang/003-Go常用库积累.md
@@ -26,7 +26,7 @@ keywords: ["Go", "tool", "库", "pkg"]
       - [7.1.2.4 GRPC 测试](#7124-grpc-测试)
       - [7.1.2.5 GRPC 压测 ghz](#7125-grpc-压测-ghz)
   - [7.2 Micro Services](#72-micro-services)
-- [8：标准库好用可替换库](#8标准库好用可替换库)
+- [8：好用可替换库](#8好用可替换库)
 - [9：数据库相关](#9数据库相关)
 - [10：MQ 库](#10mq-库)
 - [11：微服务组件库](#11微服务组件库)
@@ -48,6 +48,7 @@ keywords: ["Go", "tool", "库", "pkg"]
   - [13.1 竞态检测](#131-竞态检测)
   - [13.2 go vet 静态检查](#132-go-vet-静态检查)
   - [13.3 Shadowing variable](#133-shadowing-variable)
+  - [13.4 errcheck](#134-errcheck)
 - [15: health/status checking](#15-healthstatus-checking)
 - [16: Others](#16-others)
   - [16.1 email 电子邮件](#161-email-电子邮件)
@@ -72,12 +73,15 @@ keywords: ["Go", "tool", "库", "pkg"]
   - [16.20 常用软件 SDK](#1620-常用软件-sdk)
     - [16.20.1 钉钉 dingtalk](#16201-钉钉-dingtalk)
     - [16.20.1 微信 wechat](#16201-微信-wechat)
+  - [16.21 go 加解密](#1621-go-加解密)
 - [17 一些特殊的库 Lib](#17-一些特殊的库-lib)
 - [18 tools 工具库](#18-tools-工具库)
 - [19 金融交易相关](#19-金融交易相关)
 - [20 gosdk](#20-gosdk)
+  - [20.1 微信](#201-微信)
+  - [20.2 钉钉](#202-钉钉)
 - [21 go devops](#21-go-devops)
-- [22 go 数据分析](#22-数据分析)
+- [22 数据分析](#22-数据分析)
 
 # 1：日志库
 
@@ -240,7 +244,7 @@ https://github.com/grpc-ecosystem/go-grpc-middleware
 
 - **(2): [grpcUI](https://github.com/fullstorydev/grpcui/)**
 
-  - https://github.com/fullstorydev/grpcui/
+  - <https://github.com/fullstorydev/grpcui/>
 
   ```go
   // 安装
@@ -264,7 +268,7 @@ https://github.com/grpc-ecosystem/go-grpc-middleware
 
 #### 7.1.2.5 GRPC 压测 ghz
 
-- https://ghz.sh/
+- <https://ghz.sh/>
 
 ```go
   ghz -insecure \
@@ -279,13 +283,13 @@ https://github.com/grpc-ecosystem/go-grpc-middleware
 
 ```
 
-- https://github.com/crossoverjie/ptg
+- <https://github.com/crossoverjie/ptg>
 
 ## 7.2 Micro Services
 
 # 8：好用可替换库
 
-- https://github.com/nikgalushko/fx
+- <https://github.com/nikgalushko/fx>
 
 ```go
 // json
@@ -341,7 +345,7 @@ https://github.com/qiniu/qmgo
 
 # 11：微服务组件库
 
-- https://github.com/go-micro-dev/plugins
+- <https://github.com/go-micro-dev/plugins>
 
 ## 11.1 限流
 
@@ -379,12 +383,12 @@ https://github.com/afex/hystrix-go
 
 ### 11.3.2 oepnTelemetry
 
-- https://studygolang.com/articles/23528?fr=sidebar
-- https://github.com/go-micro-dev/plugins/blob/master/wrapper/trace/opentracing/opentracing.go
-- https://github.com/lppgo/my_test/tree/master/040_opentracing
-- https://github.com/uptrace/uptrace
-- https://github.com/uptrace/uptrace-go
-- https://github.com/Kashoo/go-micro-opentelemetry
+- <https://studygolang.com/articles/23528?fr=sidebar>
+- <https://github.com/go-micro-dev/plugins/blob/master/wrapper/trace/opentracing/opentracing.go>
+- <https://github.com/lppgo/my_test/tree/master/040_opentracing>
+- <https://github.com/uptrace/uptrace>
+- <https://github.com/uptrace/uptrace-go>
+- <https://github.com/Kashoo/go-micro-opentelemetry>
 
 # 12: 测试相关 related
 
@@ -407,7 +411,7 @@ fortio
 
 # 14: 性能分析
 
-- **ThreadLocal for Golang** :https://github.com/timandy/routine
+- **ThreadLocal for Golang** :<https://github.com/timandy/routine>
 
 ## 14.1 prof
 
@@ -448,7 +452,7 @@ godepgraph -s import-cycle-example | dot -Tpng -o godepgraph.png
 
 ## 13.1 竞态检测
 
-`go run -race xxx.go `
+`go run -race xxx.go`
 
 ## 13.2 go vet 静态检查
 
@@ -504,6 +508,10 @@ go-nyet subpackage
 go-nyet file.go
 
 ```
+
+## 13.4 errcheck
+
+- `https://github.com/kisielk/errcheck` 用来检查未处理的 error
 
 # 15: health/status checking
 
@@ -717,43 +725,43 @@ https://github.com/deatil/go-cryptobin
 # 17 一些特殊的库 Lib
 
 - 1. **端口复用**
-     https://github.com/libp2p/go-reuseport
+     <https://github.com/libp2p/go-reuseport>
 - 2. **自动调整 maxprocs**
-     https://github.com/uber-go/automaxprocs
+     <https://github.com/uber-go/automaxprocs>
 - 3. **auto adjust your GOGC value**
-     https://github.com/cch123/gogctuner
+     <https://github.com/cch123/gogctuner>
 - 4. **GeoIP2**
-     https://github.com/Hackl0us/GeoIP2-CN
+     <https://github.com/Hackl0us/GeoIP2-CN>
 
 - 5. **汉字拼音**
-     https://github.com/mozillazg/go-pinyin
+     <https://github.com/mozillazg/go-pinyin>
 
 - 6. **Go 语言给编译出来的程序添加图标和版本信息**
-     https://github.com/josephspurrier/goversioninfo
-     https://studygolang.com/topics/15789
+     <https://github.com/josephspurrier/goversioninfo>
+     <https://studygolang.com/topics/15789>
 - 7. **yaegi 是一个 go 语言解释器**
-     https://github.com/traefik/yaegi
+     <https://github.com/traefik/yaegi>
 - 8. **golang 进度条展示**
-     https://github.com/qianlnk/pgbar
+     <https://github.com/qianlnk/pgbar>
 - 9. **go+web 开发桌面应用**
      现代化 Web 技术开发桌面应用的 Go 框架
-     https://wails.io/docs/introduction
+     <https://wails.io/docs/introduction>
 - 10. **将 c 代码转成 go 代码**
-      https://gitlab.com/cznic/ccgo
+      <https://gitlab.com/cznic/ccgo>
 
 - 11. **将 proto 和 json 转换的库 protojson**
       Go 实现 Protocol Buffers 与 JSON 转换：protojson
-      https://juejin.cn/post/7281905382484672523
+      <https://juejin.cn/post/7281905382484672523>
       google.golang.org/protobuf/encoding/protojson
 
 # 18 tools 工具库
 
 - 1. **ztool**
-     https://github.com/druidcaesa/ztool
-     https://studygolang.com/articles/35697#reply0
+     <https://github.com/druidcaesa/ztool>
+     <https://studygolang.com/articles/35697#reply0>
 
 - 2. **lancet** lancet（柳叶刀）是一个全面、高效、可复用的 go 语言工具函数库
-     https://github.com/duke-git/lancet
+     <https://github.com/duke-git/lancet>
 
 # 19 金融交易相关
 
@@ -794,9 +802,9 @@ vat : VAT 验证及欧洲增值税率工具
 
 # 20 gosdk
 
-- sdk 三方库:https://github.com/eryajf/third-tools
+- sdk 三方库:<https://github.com/eryajf/third-tools>
 - Go 开发常用工具库, Google2 步验证客户端,AES 加密解密,RSA 加密解密,钉钉机器人,邮件发送,JWT 生成解析,Log,BoltDB 操作,图片操作,json 操作,struct 序列化
-  - https://github.com/chanyipiaomiao/hltool
+  - <https://github.com/chanyipiaomiao/hltool>
 
 ## 20.1 微信
 
@@ -887,7 +895,7 @@ https://github.com/krilor/gossh
 # 22 数据分析
 
 - 类似于 numpay,pandas
-- Go 中的数据分析——如何使用 `Gota` 包:https://www.freecodecamp.org/news/exploratory-data-analysis-in-go-with-gota/
+- Go 中的数据分析——如何使用 `Gota` 包:<https://www.freecodecamp.org/news/exploratory-data-analysis-in-go-with-gota/>
 
 - **feature**格式: `https://github.com/lppgo/feather`
 - **dbf**格式:
